Use ErrorProne + NullAway